force-app/main/default/objects/Track__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Tracks</relationshipLabel>
    <relationshipName>Tracks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>