force-app/main/default/objects/Track__c/fields/Number_of_Related_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Related_Sessions__c</fullName>
    <description>This is a system generated field</description>
    <inlineHelpText>This is a system generated field</inlineHelpText>
    <label>Number of Related Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>