force-app/main/default/objects/Track__c/fields/Track_Category__c.field-meta.xml
<CustomField>
    <fullName>Track_Category__c</fullName>
    <label>Track Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Category #1</fullName>
            </value>
            <value>
                <fullName>Category #2</fullName>
            </value>
            <value>
                <fullName>Category #3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>