force-app/main/default/objects/Track__c/fields/Track_Status__c.field-meta.xml
<CustomField>
    <fullName>Track_Status__c</fullName>
    <label>Track Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Leader Identified</fullName>
            </value>
            <value>
                <fullName>Sessions Pending</fullName>
            </value>
            <value>
                <fullName>Draft Sessions Submitted</fullName>
            </value>
            <value>
                <fullName>Sent to Copy Edit</fullName>
            </value>
            <value>
                <fullName>Editorial Review Completed</fullName>
            </value>
            <value>
                <fullName>Technical Review Completed</fullName>
            </value>
            <value>
                <fullName>Finalized</fullName>
            </value>
            <value>
                <fullName>Ready to Publish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>